fixed spacing issues with wrapper. fixed contact alignment

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,15 +1,10 @@
 /* contact.css */
 
 .contactInfoList {
-	position: relative;
-	left: 248px;
-	margin: 0;
-    margin-top: 0;
-    margin-bottom: 100px;
-    padding: 0;
-    display: inline-block;
-    width: auto;
-    bottom: 138px;
+	display: block;
+	margin-left: 232px;
+	margin-top: 40px;
+	padding: 0;
 }
 
 .contactInfoList > li {
