--- a/css/home.css
+++ b/css/home.css
@@ -2,8 +2,6 @@
 
 .homeMain {
 	margin-top: 50px;
-    margin-left: 40px;
-    margin-right: 40px;
 }
 
 .contactLine {
